[package]
name = "process-dumper"
version = "0.1.0"
authors = ["a2x"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/a2x/process-dumper"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
memflow = "0.2"
pelite = { version = "0.10", features = ["unstable"] }
simplelog = "0.12"

[target.'cfg(windows)'.dependencies]
memflow-native = { git = "https://github.com/memflow/memflow-native" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
